<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_nav_home"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_settings"
        android:checkable="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

    <group
        android:id="@+id/menu_group_settings"
        android:checkable="false">

        <item
            android:id="@+id/menu_feedback"
            android:checkable="false"
            android:title="@string/send_feedback" />

        <item
            android:id="@+id/menu_share"
            android:checkable="false"
            android:title="@string/share" />

        <item
            android:id="@+id/menu_notices"
            android:checkable="false"
            android:title="@string/legal_notices" />
    </group>
</menu>